[package]
name = "nft-server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.57"
axum = { git = "https://github.com/tokio-rs/axum.git", tag = "axum-v0.6.0-rc.1", optional = true, features = ["macros"] }
ethers = "0.17.0"
eyre = "0.6.8"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = {version = "1.21.0", features = ["macros", "fs"] }
tower-http = "0.3.4"
url = { version = "2.3.0", features = ["serde"] }

[features]
default = ["axum"]
axum = ["dep:axum"]

[[bin]]
name = "example"
path = "./bin/example.rs"
required-features = ["axum"]