[package]
name = "nft-server"
version = "0.1.1"
authors = [ "James Prestwich <james@nomad.xyz>"]
edition = "2021"
description = "A simple, minimal NFT metadata generation trait, and a batteries-included metadata server"
repository = "https://github.com/nomad-xyz/nft-server"
license = "MIT OR Apache-2.0"
keywords = [ "Ethereum", "NFT" ]

[dependencies]
async-trait = "0.1.57"
ethers = "0.17.0"
eyre = "0.6.8"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
thiserror = "1.0.34"
tokio = {version = "1.21.0", features = ["macros", "fs"] }
tower-http = "0.3.4"
tracing = "0.1.36"
url = { version = "2.3.0", features = ["serde"] }
axum = { version = "0.6.0-rc.2", optional = true, features = ["macros"] }

[features]
default = ["axum"]
axum = ["dep:axum"]

[[bin]]
name = "example"
path = "./bin/example.rs"
required-features = ["axum"]
